# sae-cbm-eval

./: .env.example  .gitignore  METHODS.md  PLAN.md  README.md  SPEC.md  next-steps.md  pyproject.toml  results.tex
scripts/: 00_verify_sae.py  01_extract_features.py  02_train_baseline.py  03_run_pruning.py  04_l1_baseline.py  05_final_test.py  06_plot_results.py  07_random_baseline.py  08_clip_baseline.py  09_collect_exemplars.py  10_label_features.py  11_attribute_alignment.py  12_semantic_agreement.py  13_plot_all.py
src/sae_cbm_eval/: __init__.py  alignment.py  attributes.py  classification.py  constants.py  cub.py  extraction.py  pruning.py  runtime.py
